tests/snapshots/errors/binary_type_error.mc
let x = "hello" - 5;
